# gastify

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  MOBILE.md  README.md  package-lock.json  package.json  playwright.config.ts
backend/: .env.example  .env.local.example  .env.production.example  .env.staging-e2e.example  .env.staging.example  Dockerfile  alembic.ini  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_core_tables.py  002_fx_rates.py  003_credits_and_rls.py  004_consent_dsr.py  005_scan_metrics.py  006_scans.py  007_v4_taxonomy.py  008_english_category_keys.py  009_receipt_discount_fields.py  010_four_level_store_taxonomy.py  011_mapping_memory_and_store_provenance.py  012_transaction_reconciliation_totals.py  013_scan_review_signals.py  014_mobile_push_tokens.py  015_statement_reconciliation_foundation.py  016_statement_same_scope_fk_constraints.py  017_transaction_recurrence_fields.py  018_statement_ai_processing_consent.py  019_statement_line_fallback_evidence.py  020_statement_extraction_usage_metadata.py  021_statement_unidentified_item_source.py  022_transaction_item_user_flags.py  023_consent_withdrawn_at.py  024_scan_status_queued.py  025_credit_plan_tier.py  026_scan_transaction_id.py  027_rls_policies_missing_ok_guc.py  028_group_scope_membership_oracle.py  029_group_membership_readers_and_invites.py  030_transaction_share_provenance.py  031_fix_group_reader_text_casts.py  032_group_member_visibility_consent.py  033_share_lock_and_group_avatar.py  034_notifications.py  035_group_stat_tombstones.py  036_tombstones_append_only.py  037_retention_audit_purge_definer.py  038_audit_events_governed_mutations.py  039_transaction_share_count.py  040_user_date_format.py  (+4 more)
backend/app/: bootstrap_db.py  config.py  db.py  env_files.py  i18n.py  logging.py  main.py  middleware.py  observability.py  rate_limit.py
backend/app/agents/: categorization.py  extraction.py  statement_extraction.py  store_categorization.py  usage.py
backend/app/api/: billing.py  card_aliases.py  consent.py  groups.py  health.py  insights.py  items.py  mappings.py  metrics.py  notifications.py  privacy.py  push_tokens.py  reference.py  (+6 more)
backend/runbooks/: AUTH-BOUNDARY.md  BACKUP-RESTORE.md  CONNECTION-POOL.md  CORS-POLICY.md  ERASURE-POLICY.md  RATE-LIMIT.md  SECRETS.md  UPLOAD-SECURITY.md  WORKER-PIPELINE.md
backend/schema/: RLS.md  SECURITY.md
backend/tests/: conftest.py  test_adversarial.py  test_audit_append_only_postgres.py  test_auth.py  test_billing.py  test_billing_postgres.py  test_boleta.py  test_bootstrap_db.py  test_card_aliases.py  test_categorization_agent.py  test_coalesce.py  test_cohort.py  test_config.py  test_consent.py  test_consent_propagation.py  test_cost_snapshot.py  test_env_files.py  test_erasure_postgres.py  test_extraction_agent.py  test_fx.py  test_group_hardening.py  test_group_isolation.py  test_group_leave_void.py  test_group_scope.py  test_group_share.py  test_group_stat_tombstone.py  test_group_visibility.py  test_groups.py  test_health.py  test_insights_contract.py  test_insights_engine.py  test_insights_period_granularity.py  test_insights_series.py  test_insights_tree.py  test_items.py  test_json_repair.py  test_legacy_errors.py  test_locations.py  test_lock_on_match.py  test_manual_entry_validation.py  (+45 more)
(+1661 files in other folders)
