[project]
name = "gastify-backend"
version = "0.1.0"
description = "Gastify FastAPI backend — Chilean smart expense tracker"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "firebase-admin>=6.6.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "sse-starlette>=2.2.0",
    "structlog>=24.0.0",
    "Pillow>=11.0.0",
    "python-multipart>=0.0.18",
    "pydantic-ai>=1.102.0,<2.0",
    "google-generativeai>=0.8.0",
    "python-dotenv>=1.0.0",
    "pypdf>=6.13.3,<6.14.0",
    "pymupdf>=1.24.0",
    "defusedxml>=0.7.1",
    "slowapi>=0.1.9",
    # Security override (CVE-2026-48990): joserfc arrives transitively via firebase-admin;
    # pin the patched line so the SCA gate (pip-audit) passes.
    "joserfc>=1.6.7",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pip-audit>=2.7.0",
    "google-cloud-bigquery>=3.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"app/api/*.py" = ["B008"]
"alembic/versions/*.py" = ["E501"]

[tool.coverage.run]
concurrency = ["greenlet", "thread"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

# asyncpg ships no py.typed marker / stubs. Used directly by app/bootstrap_db.py
# (the DB role-split provisioning, P43).
[[tool.mypy.overrides]]
module = ["asyncpg", "asyncpg.*"]
ignore_missing_imports = true
